tests/baselines/reference/checkJsdocOnEndOfFile.errors.txt
eof.js(2,20): error TS2304: Cannot find name 'bad'.


==== eof.js (1 errors) ====
    /**
     * @typedef {Array<bad>} Should have error here
                       ~~~
!!! error TS2304: Cannot find name 'bad'.
     */
    